[package]
name = "window"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "4.0.1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

[dependencies.bevy]
version = "0.9.1"
features = ["dynamic", "serialize"]

[profile.dev]
opt-level = 1       # Enable a small amount of optimization in debug mode

[profile.dev.package."*"]
opt-level = 3       # Enable high optimizations for dependencies (incl. Bevy), but not for our code

[profile.release]
debug = false
strip = true        # Automatically strip symbols from the binary
codegen-units = 1   # Maximize size reduction optimizations (in exchange for slower compile time)